--- a/style.css
+++ b/style.css
@@ -355,6 +355,7 @@ img {
 .slide__numbers {
     background-color: rgba(2, 12, 33, 1);
     opacity: 0.8;
+    width: 100%;
 }
 
 .numbers__name {
@@ -377,6 +378,7 @@ img {
     font-weight: 400;
     line-height: 28px; /* 155.556% */
     padding-bottom: 39px;
+    padding-top: 36px;
     width: 484px;
     margin: auto;
     
@@ -386,7 +388,8 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    gap: 127px;
+    padding-bottom: 224px;
 }
 
 .columns__numb {
@@ -408,6 +411,5 @@ img {
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
-    padding-bottom: 224px;
     width: 340px;
 }
